@@ -181,9 +181,13 @@ def get_current_process_syswow_peb():
 
     class CurrentProcessReadSyswow(process.Process):
         bitness = 64
+        def _get_handle(self):
+            print("CurrentProcessReadSyswow get_handler")
+            return winproxy.OpenProcess(dwProcessId=current_process.pid)
+
         def read_memory(self, addr, size):
             buffer_addr = ctypes.create_string_buffer(size)
-            winproxy.NtWow64ReadVirtualMemory64(current_process.handle, addr, buffer_addr, size)
+            winproxy.NtWow64ReadVirtualMemory64(self.handle, addr, buffer_addr, size)
             return buffer_addr[:]
     peb_addr = get_current_process_syswow_peb_addr()
     return windows.winobject.process.RemotePEB64(peb_addr, CurrentProcessReadSyswow())
